k8s/ingress/traefik/05.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: ingress-traefik
spec:
  type: NodePort
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
