k8s/ingress/traefik/07.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: ingress-traefik
spec:
  rules:
  - host: traefik-ui.minikube
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: traefik-web-ui
            port:
              name: web
