k8s/ingress/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: foobar3000.traefik
    http:
      paths:
      - pathType: Prefix
        path: "/"      
        backend:
          service:
            name: my-service
            port:
              number: 80
